@@ -1,2 +1,2 @@
 #!/bin/bash
-${JAVA_HOME}/bin/java --module-path lib/ --add-modules=javafx.controls -jar FontAwesomeDemo.jar &
+${JAVA_HOME}/bin/java --module-path lib/ --add-modules=javafx.controls --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED -jar FontAwesomeDemo.jar &
